fix stretched images

--- a/css/Homepage.css
+++ b/css/Homepage.css
@@ -239,6 +239,7 @@ h6 {
 .rounded-circle.d-none.d-sm-block.shadow-lg.classRule-ijuaz5 {
     height: 100% !important;
     width: 200px !important;
+    object-fit: cover !important; 
     border-radius: 25px !important;
 }
 
@@ -343,6 +344,7 @@ h6 {
 .rounded-circle.d-none.d-sm-block.shadow-lg.classRule-it0wno {
     height: 100% !important;
     width: 200px !important;
+    object-fit: cover !important; 
     border-radius: 25px !important;
 }
 
@@ -437,6 +439,7 @@ h6 {
 .rounded-circle.d-none.d-sm-block.shadow-lg.classRule-irpomn {
     height: 100% !important;
     width: 200px !important;
+    object-fit: cover !important; 
     border-radius: 25px !important;
 }
 
@@ -549,6 +552,7 @@ h6 {
 .rounded-circle.d-none.d-sm-block.shadow-lg.classRule-i29hgd {
     height: 100% !important;
     width: 200px !important;
+    object-fit: cover !important; 
     border-radius: 25px !important;
 }
 
