--- a/css/Suppliers.css
+++ b/css/Suppliers.css
@@ -174,6 +174,7 @@ h6 {
 .rounded-circle.d-none.d-sm-block.shadow-lg.classRule-ijuaz5 {
     height: 100% !important;
     width: 200px !important;
+    object-fit: cover !important; 
     min-height: 100% !important;
     border-radius: 25px !important;
 }
@@ -279,6 +280,7 @@ h6 {
 .rounded-circle.d-none.d-sm-block.shadow-lg.classRule-it0wno {
     height: 100% !important;
     width: 200px !important;
+    object-fit: cover !important; 
     border-radius: 25px !important;
 }
 
@@ -373,6 +375,7 @@ h6 {
 .rounded-circle.d-none.d-sm-block.shadow-lg.classRule-irpomn {
     height: 100% !important;
     width: 200px !important;
+    object-fit: cover !important; 
     border-radius: 25px !important;
 }
 
@@ -467,6 +470,7 @@ h6 {
 .rounded-circle.d-none.d-sm-block.shadow-lg.classRule-ivg0tw {
     height: 100% !important;
     width: 200px !important;
+    object-fit: cover !important; 
     border-radius: 25px !important;
 }
 
